--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ html,body,section {
   top: -10px;
   bottom: -10px;
   right: -10px;
-  background: url(http://cloud.hunger-valley.com/music/public_tuijian_spring.jpg-big) center center no-repeat;
+  background: rgba(0,0,0,0.6)  center center no-repeat;
   background-size: cover;
   filter: blur(4px);
 }
